# Minotaur

./: .gitignore  Cargo.toml  README.md  node1.sh  node2.sh  node3.sh  pubkeys.txt  start_fly_client.sh  start_staking.sh  time.txt
Bitcoin/: README.md  fast_mining.sh  run_selfish.sh
Bitcoin/src/: block.rs  blockchain.rs  main.rs  miner.rs
Fruitchains/: Cargo.toml  README.md  node2.sh  node3.sh  node4.sh  run_3_together.sh  run_one_node.sh  run_selfish.sh  start_mining.sh  start_spv_client.sh
Fruitchains/experiments/selfish_mining/: Bitcoin_result.txt  Fruitchains_result.txt
Fruitchains/experiments/variable_difficulty/: process_log.py
Fruitchains/src/: block.rs  blockchain.rs  main.rs  miner.rs  spam_recorder.rs  transaction.rs
Fruitchains/src/api/: mod.rs
Fruitchains/src/crypto/: merkle.rs
Fruitchains/src/network/: selfish_worker.rs  worker.rs
Minotaur/: Cargo.toml  README.md  fast_txns.sh  flamegraph_one_node.sh  linux_time.sh  log.txt  node1.sh  node2.sh  node3.sh  node4.sh  node5.sh  project_4.sh  quick_start.sh  run_3_together.sh  run_grid_private_attack.sh  run_one_node.sh  run_selfish.sh  run_spam_4node.sh  run_spam_4node_slow_minig.sh  spam_result.txt  start_txns.sh  stop_mining.sh  stop_staking.sh  stop_txns.sh  time.sh  time.txt  tmp.txt
Minotaur/experiments/: minotaur_11x11.ipynb
Minotaur/spam_experiment_2021dec24/: spam_result_delay0.slowMining.txt  spam_result_delay0.txt  spam_result_delay100.slowMining.txt  spam_result_delay100.txt  (+4 more)
src/: block.rs  blockchain.rs  fly.rs  main.rs  miner.rs  staker.rs  state.rs  txgenerator.rs
(+51 files in other folders)
