[package]
name = "fruitchains"
version = "0.1.0"
authors = []
edition = "2018"

[dependencies]
ring = "0.16"
bincode = "1.2"
serde = { version = "1.0", features = ["derive"] }
hex = "0.4"
log = "0.4"
stderrlog = "0.4"
mio = "0.6"
slab = "0.4"
mio-extras = "2.0"
serde_json = "1.0"
tiny_http = "0.6"
url = "2.1"
crossbeam = "0.7"
rand = "0.6"
hex-literal = "0.2"
clap = { version = "2.33", features = ["wrap_help"]}
tari_mmr = "0.1.0"
sha2 = "0.8.1"
croaring = "0.3.9"
vrf = "0.2.2"


[features]
default = []
test-utilities = []
